unpackaged/main/default/objects/Matter_Bank_Account__c/Matter_Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Matter Bank Account</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matter Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>