unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Amount_of_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Exemption__c</fullName>
    <label>Amount of Exemption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>