unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Bank_Garnish_Returned__c.field-meta.xml
<CustomField>
    <fullName>Bank_Garnish_Returned__c</fullName>
    <label>MOG Returned</label>
    <type>Date</type>
</CustomField>