unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Bank_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_Phone__c</fullName>
    <label>Bank Phone</label>
    <type>Phone</type>
</CustomField>