unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Claim_of_Exemption_Comments__c.field-meta.xml
<CustomField>
    <fullName>Claim_of_Exemption_Comments__c</fullName>
    <label>Claim of Exemption Comments</label>
    <type>TextArea</type>
</CustomField>