unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Date_of_Levy__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Levy__c</fullName>
    <label>Date Served</label>
    <type>Date</type>
</CustomField>