unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Deadline_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>Deadline_to_Respond__c</fullName>
    <label>Deadline to Respond</label>
    <type>Date</type>
</CustomField>