unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Funds_Received_from_Sheriff__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received_from_Sheriff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to track if funds have been received from Sheriff</description>
    <label>Funds Received from Sheriff</label>
    <type>Checkbox</type>
</CustomField>