unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Levy_Number__c.field-meta.xml
<CustomField>
    <fullName>Levy_Number__c</fullName>
    <label>Levy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>