unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Matter Bank Accounts</relationshipLabel>
    <relationshipName>Matter_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>