unpackaged/main/default/objects/Matter_Bank_Account__c/fields/MOG_Amount__c.field-meta.xml
<CustomField>
    <fullName>MOG_Amount__c</fullName>
    <label>MOG Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>