unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Oppose_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Oppose_Exemption__c</fullName>
    <label>Oppose Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>