unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Sheriff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sheriff_Contact__c</fullName>
    <label>Sheriff Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>