unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Sheriff_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sheriff_Phone__c</fullName>
    <label>Sheriff Phone</label>
    <type>Phone</type>
</CustomField>