unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Writ__c.field-meta.xml
<CustomField>
    <fullName>Writ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Matter Bank Account to Writ, results filtered so only Writs related to the same matter appear in the results</description>
    <inlineHelpText>Related Writs</inlineHelpText>
    <label>Writ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Writ__c.Matter__c</field>
            <operation>equals</operation>
            <valueField>$Source.Matter__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Writ__c</referenceTo>
    <relationshipLabel>Matter Bank Accounts</relationshipLabel>
    <relationshipName>Matter_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>