unpackaged/main/default/objects/Matter_Bank_Account__c/fields/Writ_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Writ_Expiration_Date__c</fullName>
    <description>Display related Writ expiration date</description>
    <formula>Writ__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expiration date of related Writ</inlineHelpText>
    <label>Writ Expiration Date</label>
    <type>Date</type>
</CustomField>